# swing-trading-bot

./: .gitignore  MERGE_COMMIT  Makefile  README.md  pyproject.toml
.github/workflows/: live.yml  trade.yml
configs/: cloud.yaml  default.yaml
docs/: CONTINUAL_RRL.md  ENVIRONMENT.md  FINDINGS.md  PAPER_TRADING.md  PAPER_TRADING_PROMPT.md
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-15/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
scripts/: backtest_5y.py  build_findings_page.py  export_site_data.py  live_quotes.py
src/swingbot/: cli.py  config.py  dashboard.py  execution.py  metrics.py  portfolio.py  reporting.py  rewards.py  trials.py
src/swingbot/agents/: baselines.py  ranker.py
src/swingbot/backtest/: runner.py  validation.py
src/swingbot/data/: schema.py  sources.py  store.py
src/swingbot/env/: trading_env.py
src/swingbot/features/: cross_section.py  fracdiff.py  technical.py
src/swingbot/paper/: dashboard.py  engine.py  gate.py  learner.py  state.py  universe.py
tests/: test_dashboard.py  test_env.py  test_execution.py  test_features.py  test_paper.py  test_portfolio.py  test_ranker.py  test_rewards.py  test_validation.py
