[project]
name = "swingbot"
version = "0.1.0"
description = "Deep RL swing-trading research system with simulated-capital paper trading"
requires-python = ">=3.12,<3.13"

dependencies = [
    "numpy>=1.26,<2.3",
    "scipy>=1.14",
    "pandas>=2.2",
    "polars>=1.0",
    "duckdb>=1.1",
    "lightgbm>=4.4",
    "pyarrow>=17.0",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "requests>=2.32",
    "structlog>=24.4",
    "rich>=13.7",
    "typer>=0.12",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
rl = [
    "torch>=2.4",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
]
viz = [
    "matplotlib>=3.9",
    "jinja2>=3.1",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
swingbot = "swingbot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swingbot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's API *requires* calling Option()/Argument() in argument defaults.
"src/swingbot/cli.py" = ["B008"]
# This generator embeds a full CSS/JS web page as a string literal; its lines
# are web assets, not Python, so the 100-char limit doesn't apply.
"scripts/build_findings_page.py" = ["E501"]
# Mostly an embedded HTML/CSS/JS template string; hard-wrapping markup at 100
# columns hurts readability rather than helping it.
"src/swingbot/dashboard.py" = ["E501"]
"src/swingbot/paper/dashboard.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
